--- a/scripts/templates/detector.tf.j2
+++ b/scripts/templates/detector.tf.j2
@@ -55,12 +55,12 @@ resource "signalfx_detector" "{{ id }}" {
       {%- if 'formula' in signal %}
     {{ key }} = {{ signal.formula }}
       {%- endif -%}
-      {%- if loop.last -%}
+      {%- if loop.last or ('publish' in signal and signal.publish) -%}
     .publish('{{ key }}')
       {%- endif %}
     {%- endfor %}
     {%- macro macro_when(severity, rule) -%}
-          when(signal {{ rule.comparator }} ${var.{{ id }}_threshold_{{ severity }}}, lasting=%{if var.{{ id }}_lasting_duration_{{ severity }} == null}None%{else}'${var.{{ id }}_lasting_duration_{{ severity }}}'%{endif}, at_least=${var.{{ id }}_at_least_percentage_{{ severity }}}){% if rule.append_condition is string %} {{ rule.append_condition }}{% endif %}
+          when({% if rule.signal is string %} {{ rule.signal }}{% else %}signal{% endif %} {{ rule.comparator }} ${var.{{ id }}_threshold_{{ severity }}}, lasting=%{if var.{{ id }}_lasting_duration_{{ severity }} == null}None%{else}'${var.{{ id }}_lasting_duration_{{ severity }}}'%{endif}, at_least=${var.{{ id }}_at_least_percentage_{{ severity }}}){% if rule.append_condition is string %} {{ rule.append_condition }}{% endif %}
     {%- endmacro -%}
     {%- for severity, rule in rules.items() %}
       {%- if type == 'heartbeat' -%}
